--- a/static.css
+++ b/static.css
@@ -23,6 +23,90 @@ div.cloud {
 
 }
 
+div#code {
+    width: 80%;
+    position: relative;
+    top: 50px;
+    background-color: white;
+    max-width: 360px;
+    height: calc(419px);
+    border-radius: 14px;
+    padding: 40px 24px;
+
+}
+
+div#code > h2 {
+    text-align: center;
+    position: relative;
+    top: 40px;
+}
+
+div#code > span {
+    display: block;
+    text-align: center;
+}
+
+div#code > span.desc {
+    position: relative;
+    top: 64px;
+}
+
+span.number {
+    position: relative;
+    top: 70px;
+    font-weight: 700;
+}
+
+.codelabel {
+    position: relative;
+    top: 100px;
+    text-align: left;
+    width: 50%;
+    font-weight: 700;
+}
+
+.inputcode {
+    width: 100%;
+    height: 58px;
+    top: 108px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+
+.inputcode > input {
+    height: 100%;
+    width: 15%;
+    background-color: #f5f7fa;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    text-align: center;
+    font-size: 16px;
+}
+
+.inputcode > input:focus-within {
+    outline: 2px solid #99b1e6;
+}
+
+.again {
+    position: relative;
+    top: 132px;
+}
+
+.time {
+    position: relative;
+    top: 142px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.help {
+    position: relative;
+    top: 182px;
+    color: #0d4cd3;
+}
+
 img.logo {
     width: 193px;
 }
