--- a/static.css
+++ b/static.css
@@ -83,6 +83,15 @@ span.number {
     outline: none;
     text-align: center;
     font-size: 16px;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: textfield;
+}
+
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
 
 .inputcode > input:focus-within {
